docker compose push (https://stackoverflow.com/a/64023826)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   myapp:
-    build: .
+    build: ./
+    image: antoniomedeiros/learn-docker:latest
     container_name: myapp
     restart: always
     ports:
